[gd_scene load_steps=2 format=2]

[ext_resource path="res://actors/enemy/utils/ObstacleSpawner.gd" type="Script" id=1]

[node name="ObstacleSpawner" type="Node2D"]
script = ExtResource( 1 )
ground_obstacle_frequency = 1.5
sky_obstacle_frequency = 5

[node name="GroundObstacleTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="SkyObstacleTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="GroundObstacleTimer" to="." method="_emit_ground_obstacle"]
[connection signal="timeout" from="SkyObstacleTimer" to="." method="_emit_sky_obstacle"]
